feat: adduser to docker

--- a/Dockerfile.16.0
+++ b/Dockerfile.16.0
@@ -4,6 +4,7 @@ ARG NEXTCLOUD_VERSION=16.0.1
 ARG GPG_nextcloud="2880 6A87 8AE4 23A2 8372  792E D758 99B9 A724 937A"
 
 ENV UID=991 GID=991 \
+    USER=abc \
     UPLOAD_MAX_SIZE=10G \
     APC_SHM_SIZE=128M \
     OPCACHE_MEM_SIZE=128 \
@@ -58,6 +59,7 @@ RUN apk -U upgrade \
 
 COPY rootfs /
 
+RUN adduser -DH -u $UID $USER
 RUN chmod +x /usr/local/bin/* /etc/s6.d/*/* /etc/s6.d/.s6-svscan/*
 
 VOLUME /data /config /apps2 /nextcloud/themes
