--- a/Dockerfile.daily
+++ b/Dockerfile.daily
@@ -1,6 +1,7 @@
 FROM wonderfall/nginx-php:7.2
 
 ENV UID=991 GID=991 \
+    USER=abc \
     UPLOAD_MAX_SIZE=10G \
     APC_SHM_SIZE=128M \
     OPCACHE_MEM_SIZE=128 \
@@ -47,6 +48,7 @@ RUN apk -U upgrade \
 
 COPY rootfs /
 
+RUN adduser -DH -u $UID $USER
 RUN chmod +x /usr/local/bin/* /etc/s6.d/*/* /etc/s6.d/.s6-svscan/*
 
 VOLUME /data /config /apps2 /nextcloud/themes /php/session
